--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,5 +25,7 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
+    implementation 'org.ftclib.ftclib:vision:2.0.1' // vision
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 }
